<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlBottomSheetSortir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:id="@+id/llSlideSortir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/view_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_big"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/action_sortir"
            android:textAppearance="@style/TextAppearance.CircularStd.Bold"
            android:textColor="@color/black"
            android:textSize="@dimen/title_medium_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spSortir"
                style="@style/SpinnerOutlineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <ImageView
                android:layout_width="@dimen/icon_medium_size"
                android:layout_height="@dimen/icon_medium_size"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="@dimen/margin_big"
                android:src="@drawable/ic_dropdown" />


            <TextView
                style="@style/TextViewHintOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hint_urutkan_berdasarkan" />


        </FrameLayout>

        <Button
            android:id="@+id/btnSubmitSortir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@color/orange"
            android:text="@string/action_kirim"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.CircularStd.Medium"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium_size" />

    </LinearLayout>

</RelativeLayout>